2006-06-29  Reinout van Rees  <reinout@vanrees.org>

	* ChangeLog: Started the changelog.
